@@ -14,6 +14,8 @@ CHANGES IN HTMLDOC v1.8.24
 
     CHANGES
 
+	- Now use a 0.001 point tolerance when checking for
+	  content that overflows the page/cell.
 	- HTMLDOC no longer enables interpolation of 2-color
 	  images.
 
